# wusaki-agent

./: .gitignore  README.md  config.example.toml  feature_list.json  main.py  package.json  progress_journal.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  tsconfig.json
agent/: config.py  config_models.py  memory.py  persona.py  provider.py  scheduler.py  skills.py
bootstrap/: app.py  channels.py  dashboard_api.py  init_workspace.py  memory.py  proactive.py  setup_wizard.py  tools.py
config/: settings.example.toml
docs/: AGENT_LOOP.md  ARCHITECTURE.md  PRD.md
handoff/: HANDOFF.md
memory/: injection_planner.py  memorizer.py  post_response_worker.py  procedure_tagger.py  retriever.py
proactive_v1/: agent_tick_factory.py  config_loader.py  drift_tools.py  gateway.py  judge.py  loop.py  mcp_sources.py  sensor.py  tools.py
proactive_v2/: agent_tick_factory.py  loop.py  mcp_sources.py  memory_optimizer.py
prompts/: agent.py  proactive.py
tests/: test_agent_core_foundation.py  test_agent_core_p2_reasoner.py  test_agent_core_p3_context_store.py  test_bootstrap_wiring_p2.py  test_channel_adapters.py  test_channel_clients.py  test_dashboard_api.py  test_default_memory_plugin_config.py  test_drift_round.py  test_energy.py  test_event_semantic_dedup.py  test_feature_registry.py  test_forget_memory_tool.py  test_http_migrations.py  test_hyde_enhancer.py  test_internal_modules.py  test_logic_modules.py  test_loop_tool_visibility.py  test_mcp_sources_async.py  test_memory_consolidation.py  test_memory_consolidation_idempotency.py  (+37 more)
(+103 files in other folders)
